# cups-browsed

./: .gitignore  AUTHORS  CHANGES.md  CONTRIBUTING.md  COPYING  DEVELOPING.md  INSTALL  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: implicitclass.c
conf/: Makefile
daemon/: cups-browsed.c  cups-browsed.conf.5  cups-browsed.conf.in  cups-browsed.service
test/: run-tests.sh  test.convs
